added some more controller files